# billing_system_test_task

./: .env.sample  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  Pipfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 1af7d2c06855_create_wallet_operations.py  7b1f4f065670_create_users_table.py  8697d766eeb4_create_wallets.py
app/: __init__.py  main.py
app/adapters/sql/: db.py  models.py  tx.py
app/api/: __init__.py  users.py  wallet.py
app/db/: __init__.py
app/entities/: currency.py  user.py  wallet.py  wallet_operation.py
app/migrations/: env.py
app/migrations/versions/: 1af7d2c06855_create_wallet_operations.py  7b1f4f065670_create_users_table.py  8697d766eeb4_create_wallets.py
app/models/: user.py  wallet.py  wallet_operations.py
app/repositories/: base.py  users.py  wallet.py  wallet_operations.py
app/schemas/: user.py  wallet.py
app/settings/: __init__.py  access.py
app/tests/: conftest.py
app/tests/api/: test_users.py  test_wallets.py
app/tests/factories/: user.py
app/tests/models/: test_user.py  test_wallet.py
app/transport/http/: __init__.py
app/usecases/: user.py  wallet.py
tests/: conftest.py  factories.py
tests/api/: test_users.py  test_wallets.py
tests/models/: test_wallet.py
tests/repositories/: test_user.py  test_wallet.py  test_wallet_operation.py
tests/usecases/: test_user.py  test_wallet.py  user.py
(+1 files in other folders)
